--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -2,14 +2,19 @@ development:
   clients:
     default:
       uri: <%= ENV['DATABASE_URI'] || 'mongodb://localhost:27017/open_food_scraping_development' %>
-    # default:
-    #   database: open_food_scraping_development
-    #   hosts:
-    #     - localhost:27017
-    #   options:
-    #     read:
-    #       mode: :primary
-    #     max_pool_size: 1
+      options:
+        server_selection_timeout: 2
+
+# development:
+#   clients:
+#     default:
+#       database: open_food_scraping_development
+#       hosts:
+#         - localhost:27017
+#       options:
+#         read:
+#           mode: :primary
+#         max_pool_size: 1
 
 
 test:
